--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "httpx>=0.23.0",
     "loguru>=0.6.0",
     "lxml>=4.9.1",
+    "playwright>=1.26.1",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
