--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "xlsxwriter>=3.0.3",
     "matplotlib>=3.6.2",
     "cli-lite>=0.7.0",
+    "msgpack>=1.0.7",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
