--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,12 @@ authors = [
     {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
 ]
 dependencies = [
-    "Pillow>=9.2.0",
-    "httpx>=0.23.0",
-    "loguru>=0.6.0",
-    "lxml>=4.9.1",
-    "xlsxwriter>=3.0.3",
-    "matplotlib>=3.6.2",
-    "cli-lite>=0.7.0",
+    "Pillow>=10.1.0",
+    "httpx!=0.25.1",
+    "loguru>=0.7.2",
+    "lxml>=4.9.3",
+    "matplotlib>=3.7.3",
+    "cli-lite>=0.7.1",
     "msgpack>=1.0.7",
 ]
 requires-python = ">=3.8"
@@ -33,8 +32,8 @@ build-backend = "pdm.backend"
 [tool.pdm]
 [tool.pdm.dev-dependencies]
 dev = [
-    "black>=22.8.0",
-    "isort>=5.10.1",
+    "black>=23.11.0",
+    "isort>=5.12.0",
 ]
 
 [tool.pdm.build]
