--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,13 @@ authors = [
     {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
 ]
 dependencies = [
-    "Pillow>=10.1.0",
-    "httpx!=0.25.1",
+    "Pillow>=10.2.0",
+    "httpx>=0.27.0",
     "loguru>=0.7.2",
-    "lxml>=4.9.3",
-    "matplotlib>=3.7.3",
-    "cli-lite>=0.7.1",
-    "msgpack>=1.0.7",
+    "lxml>=5.1.0",
+    "matplotlib>=3.7.5",
+    "cli-lite>=0.8.3",
+    "msgpack>=1.0.8",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
@@ -32,8 +32,8 @@ build-backend = "pdm.backend"
 [tool.pdm]
 [tool.pdm.dev-dependencies]
 dev = [
-    "black>=23.11.0",
-    "isort>=5.12.0",
+    "black>=24.2.0",
+    "isort>=5.13.2",
 ]
 
 [tool.pdm.build]
