--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,3 +48,18 @@ excludes = [
 [tool.pdm.version]
 source = "file"
 path = "arknights_toolkit/__init__.py"
+
+[tool.black]
+line-length = 110
+target-version = ["py39", "py310", "py311", "py312"]
+include = '\.pyi?$'
+extend-exclude = '''
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 110
+length_sort = true
+skip_gitignore = true
+force_sort_within_sections = true
+extra_standard_library = ["typing_extensions"]
