--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
 ]
 dependencies = [
     "Pillow>=10.2.0",
-    "httpx>=0.27.0",
+    "httpx>=0.27.0,<0.28.0",
     "loguru>=0.7.2",
     "lxml>=5.1.0",
     "matplotlib>=3.7.5",
