--- a/.github/actions/setup-python/action.yml
+++ b/.github/actions/setup-python/action.yml
@@ -17,5 +17,5 @@ runs:
         architecture: "x64"
         cache: true
 
-    - run: pdm sync -G:all --no-isolation
+    - run: pdm sync -G:all
       shell: bash
