--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,6 @@ cython_debug/
 
 .pdm-python
 .idea/
+/arknights_toolkit/resource/info.json
+/arknights_toolkit/resource/operators/
+/arknights_toolkit/resource/ops_initialized
