:heavy_plus_sign: use `selectolax` replaced `lxml`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "cli-lite>=0.10.0",
     "msgpack>=1.0.8",
     "ujson>=5.9.0",
+    "selectolax>=0.3.31",
 ]
 requires-python = ">=3.9"
 readme = "README.md"
